--- a/app/meals/page.module.scss
+++ b/app/meals/page.module.scss
@@ -8,21 +8,21 @@
   max-width: 75rem;
   color: #ddd6cb;
   font-size: 1.5rem;
-}
 
-.header h1 {
-  font-family: "Montserrat", sans-serif;
-}
+  h1 {
+    font-family: "Montserrat", sans-serif;
+  }
 
-.highlight {
-  background: linear-gradient(90deg, #f9572a, #ff8a05);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+  .highlight {
+    background: linear-gradient(90deg, #f9572a, #ff8a05);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.header p {
-  margin: 0;
+  p {
+    margin: 0;
+  }
 }
 
 .cta a {
