--- a/components/main-header/main-header-background/main-header-background.module.scss
+++ b/components/main-header/main-header-background/main-header-background.module.scss
@@ -5,10 +5,10 @@
   top: 0;
   left: 0;
   z-index: -1;
-}
 
-.header-background svg {
-  display: block;
-  width: 100%;
-  height: auto;
+  svg {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
 }
