--- a/components/main-header/main-header.module.scss
+++ b/components/main-header/main-header.module.scss
@@ -33,11 +33,11 @@
   letter-spacing: 0.15rem;
   text-transform: uppercase;
   font-size: 1.5rem;
-}
 
-.logo img {
-  width: 5rem;
-  height: 5rem;
-  object-fit: contain;
-  filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+  img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: contain;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+  }
 }
